apps/ui/priv/static/style.css
body {
  text-align: center;
  color: black;
  background: white;
  font-family: sans-serif;
  margin: 0 auto;
  max-width: 65em;
  padding: 0;
  text-align: left;
}
a {
  color: #073;
  text-decoration: none;
  font-weight: bold;
}
a:hover {
  text-decoration: underline;
}

header.site {
  margin: 0 auto 1em;
  text-align: center;
  border-bottom: 1px dotted #ccc;
  font-family: 'Georgia', serif;
  font-style: italic;
  font-weight: bold;
}
header.site h1 {
  min-height: 35px;
  line-height: 1em;
  font-size: 300%;
  margin: 0;
  padding: 0 0;
}
header.site h1 a {
  background: url('logo.svg') no-repeat center left;
  padding-left: 42px;
  display: inline-block;
}
header.site h1 a:hover {
  color: #444;
  text-decoration: none;
}
header.site h1:after {
  content: 'Alpha';
  background-color: #073;
  padding: 0 2px;
  margin-left: 4px;
  color: white;
  font-size: 30%;
  font-family: sans-serif;
  font-weight: bold;
  font-style: normal;
  border-radius: 2px;
  vertical-align: 40%;
}
header.site .slogan {
  margin: 0;
  margin-bottom: 0.5em;
  padding: 0;
  color: #777;
}

.col, .col1, .col2 {
  margin: 0;
  padding: 0;
}
.col1 {
  float: left;
}
.col {
  max-width: 40em;
  display: inline-block;
}
.col1, .col2 {
  max-width: 48%;
}
.col1 {
  padding-right: 0.5em;
}
.col2 {
  padding-left: 0.5em;
  margin-left: 51%;
}

h2 { 
  font-size: 150%;
  font-weight: normal;
  color: #999;
  margin: 0.4em 0 0.1em;
}
header {
  text-align: center;
  margin: 0 auto;
}
header .meta {
  display: inline-block;
}
header .meta, header .meta div {
  text-align: left;
  /* Let logo float: */
  margin-left: 70px;
}
.meta h2 {
  margin: 0;
  font-style: italic;
  font-family: 'Georgia', serif;
  line-height: 0.8em;
  font-size: 300%;
}
h2 .feedicon {
  font-size: 0;
  color: rgba(255, 255, 255, 0);
  width: 0px;
  height: 0px;
  vertical-align: top;
  padding-top: 16px;
  padding-left: 16px;
  background: url('rss.png') no-repeat center top;
}
h3.feed {
  font-size: 100%;
}
.meta, section {
  min-height: 70px;
}
img.logo {
  float: left;
  vertical-align: top;
  max-width: 64px;
  max-height: 64px;
  object-fit: contain;
  padding: 0;
  margin: 2px 4px 4px 0;
}
.item img.logo {
  max-width: 40px;
  max-height: 40px;
}
.flattrdropdown.shown {
  display: block;
}
.flattrdropdown {
  display: none;
  float: right;
  text-align: right;
  font-size: 80%;
  margin-left: 0.2em;
  padding: 0.08em 0.4em 0.1em;
  vertical-align: middle;
  line-height: 1.3em;
  color: white;
  font-weight: bold;
  text-shadow: 0 -1px rgba(0, 0, 0, 0.55);
  border-radius: 3px;
  border: 1px solid rgba(0, 0, 0, 0.34);
  border-bottom-color: rgba(0, 0, 0, 0.55);
  background-color: #83AC35;
  box-shadow: 0 1px 0 rgba(255,255,255,0.55) inset,0 1.5px rgba(0,0,0,0.155),0 -0.65em rgba(0,0,0,0.15) inset;
  cursor: default;
}
.flattrdropdown:hover {
  border: 1px solid #333;
  margin-bottom: 1px;
  text-shadow: 0 -1px black;
  background-color: #639C15;
}
.flattrdropdown, .flattrdropdown:hover {
  transition: background-color 0.3s ease-in;
  -webkit-transition: background-color 0.3s ease-in;
  -moz-transition: background-color 0.3s ease-in;
  -ms-transition: background-color 0.3s ease-in;
  -o-transition: background-color 0.3s ease-in;
}
.flattr {
  color: #666;
  font-size: 80%;
  font-weight: bold;
  margin-left: 66px;
  padding: 0 0.2em;
  display: block;
  text-align: right;
  line-height: 1.2em;
}
.flattr a {
  font-size: 70%;
}
dl.flattr dt, dl.flattr dd {
  display: inline-block;
  margin: 0;
  padding: 0;
  text-align: right;
}
dl.flattr dt {
  padding-bottom: 0.5em;
}
dl.flattr dd {
  width: 120px;
  vertical-align: bottom;
}

article {
  background-color: white;
  border-top: 1px solid #eee;
  margin: 0;
  padding: 0.5em 0 0.3em;
}
article.feed {
  max-width: 20em;
}
.col2 article {
  margin-right: 0;
}
article:first-child {
  border-top: none;
}
article.feed {
  min-height: 64px;
}
article.item {
  min-height: 40px;
}
h3 {
  font-size: 120%;
  margin: 0;
  color: #999;
  font-weight: bold;
  line-height: 1em;
  font-style: italic;
  font-family: 'Georgia', serif;
}
.col1 h3, .col2 h3 {
  min-width: 42em;
}
.homepage {
  margin: 0;
  margin-top: 0.5em;
  font-size: 70%;
}
.homepage a {
  font-weight: normal;
  color: #333;
}

.download {
  list-style-type: none;
  padding: 0;
  margin: 0.6em 0 0.1em 44px;
  /* meta & flattr floats above */
  display: block;
}
.torrent a {
  color: #090;
  background: url('torrent.png') no-repeat top left;
  padding-left: 14px;
  padding-top: 3px;
  line-height: 16px;
  font-size: 90%;
  display: block;
}
.torrent:hover a {
  background: url('download.png') no-repeat top left;
}
.stats {
  padding-left: 15px;
  padding-top: 3px;
  font-size: 50%;
  color: #333;
}
.stats > * {
  margin: 0 2em 0.2em 0;
  white-space: nowrap;
  display: inline-block;
  min-width: 3em;
  min-height: 14px;
}
.stats .size {
  min-width: 5em;
  background: url('size.svg') no-repeat left top;
  padding-left: 10px;
}
.stats .d {
  background: url('d.svg') no-repeat left top;
  padding-left: 13px;
}
.stats .s {
  background: url('s.svg') no-repeat left top;
  padding-left: 11px;
}
.stats .l {
  background: url('l.svg') no-repeat left top;
  padding-left: 12px;
}
.stats .bw {
  background: url('swarm.svg') no-repeat left top;
  padding-left: 15px;
  min-width: 5em;
}

footer {
  clear: both;
  margin: 2em auto 0;
  padding: 0;
  padding-top: 0.1em;
  border-top: 1px dotted #ccc;
  text-align: center;
}
footer div {
  display: inline-block;
  vertical-align: middle;
  text-align: left;
}
footer p {
  color: #777;
  font-size: 70%;
  margin: 0 4em;
  padding: 0;
}
footer a {
  color: #777;
  font-weight: bold;
}

